connector-export-file-csv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: connector-export-file-csv
  name: connector-export-file-csv
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: connector-export-file-csv
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/aks-opencti-default: "true"
        io.kompose.service: connector-export-file-csv
    spec:
      containers:
        - env:
            - name: CONNECTOR_CONFIDENCE_LEVEL
              value: "15"
            - name: CONNECTOR_ID
              value: ${CONNECTOR_EXPORT_FILE_CSV_ID}
            - name: CONNECTOR_LOG_LEVEL
              value: info
            - name: CONNECTOR_NAME
              value: ExportFileCsv
            - name: CONNECTOR_SCOPE
              value: text/csv
            - name: CONNECTOR_TYPE
              value: INTERNAL_EXPORT_FILE
            - name: OPENCTI_TOKEN
              value: ${OPENCTI_ADMIN_TOKEN}
            - name: OPENCTI_URL
              value: http://opencti:8080
          image: opencti/connector-export-file-csv:5.8.2
          name: connector-export-file-csv
          resources: {}
      restartPolicy: Always
status: {}
