connector-import-file-stix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: connector-import-file-stix
  name: connector-import-file-stix
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: connector-import-file-stix
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/aks-opencti-default: "true"
        io.kompose.service: connector-import-file-stix
    spec:
      containers:
        - env:
            - name: CONNECTOR_AUTO
              value: "true"
            - name: CONNECTOR_CONFIDENCE_LEVEL
              value: "15"
            - name: CONNECTOR_ID
              value: ${CONNECTOR_IMPORT_FILE_STIX_ID}
            - name: CONNECTOR_LOG_LEVEL
              value: info
            - name: CONNECTOR_NAME
              value: ImportFileStix
            - name: CONNECTOR_SCOPE
              value: application/json,text/xml
            - name: CONNECTOR_TYPE
              value: INTERNAL_IMPORT_FILE
            - name: CONNECTOR_VALIDATE_BEFORE_IMPORT
              value: "true"
            - name: OPENCTI_TOKEN
              value: ${OPENCTI_ADMIN_TOKEN}
            - name: OPENCTI_URL
              value: http://opencti:8080
          image: opencti/connector-import-file-stix:5.8.2
          name: connector-import-file-stix
          resources: {}
      restartPolicy: Always
status: {}
