elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/aks-opencti-default: "true"
        io.kompose.service: elasticsearch
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms${ELASTIC_MEMORY_SIZE} -Xmx${ELASTIC_MEMORY_SIZE}
            - name: discovery.type
              value: single-node
            - name: xpack.ml.enabled
              value: "false"
            - name: xpack.security.enabled
              value: "false"
          image: docker.elastic.co/elasticsearch/elasticsearch:8.8.1
          name: elasticsearch
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: esdata
      restartPolicy: Always
      volumes:
        - name: esdata
          persistentVolumeClaim:
            claimName: esdata
status: {}
