minio-deployment.yaml
# MINIO Deployment
#
# Status: UNTESTED
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/aks-opencti-default: "true"
        io.kompose.service: minio
    spec:
      containers:
        - args:
            - server
            - /data
          image: minio/minio:RELEASE.2023-05-18T00-05-36Z
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9000/minio/health/live
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 20
          name: minio
          ports:
            - containerPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: s3data
      restartPolicy: Always
      volumes:
        - name: s3data
          persistentVolumeClaim:
            claimName: s3data
status: {}
