rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/aks-opencti-default: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_PASS
              value: ${RABBITMQ_DEFAULT_PASS}
            - name: RABBITMQ_DEFAULT_USER
              value: ${RABBITMQ_DEFAULT_USER}
            - name: RABBITMQ_NODENAME
              value: rabbit01@localhost
          image: rabbitmq:3.12-management
          name: rabbitmq
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: amqpdata
      restartPolicy: Always
      volumes:
        - name: amqpdata
          persistentVolumeClaim:
            claimName: amqpdata
status: {}
