redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/aks-opencti-default: "true"
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:7.0.11
          name: redis
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: redisdata
      restartPolicy: Always
      volumes:
        - name: redisdata
          persistentVolumeClaim:
            claimName: redisdata
status: {}
