opencti-service.yaml
# OPENCTI Service
#
# STATUS: UNTESTED
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: opencti
  name: opencti
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: opencti
status:
  loadBalancer: {}
